--- a/config.properties
+++ b/config.properties
@@ -6,7 +6,7 @@ server=localhost
 # elasticsearch's cluster name. See cluster.name in your $elasticsearchLoc/config/elasticsearch.yml
 cluster=stackoverflow
 # index name
-index=qualitas_corpus_ngram_8
+index=test
 # type name
 type=siamese
 # location of the input folder. This is the location of the files to be indexed (if command=index),
